--- a/hardware/pigpiod/pi-gpiod.html
+++ b/hardware/pigpiod/pi-gpiod.html
@@ -417,7 +417,7 @@
 
 <script type="text/x-red" data-help-name="pi-gpiod out">
     <p>Raspberry Pi output node. Can be used in Digital, PWM or Servo modes. Requires the
-    <a href="http://abyz.co.uk/rpi/pigpio/pigpiod.html" target="_new">pi-gpiod</a> daemon to be running in order to work.</p>
+    <a href="http://abyz.me.uk/rpi/pigpio/pigpiod.html" target="_new">pi-gpiod</a> daemon to be running in order to work.</p>
     <p><b>Inputs</b>
     <ul>
         <li><code>msg.payload</code> - <i>number | string</i> - 0,1 (Digital), 0-100 (PWM, Servo)</li>
