--- a/hardware/pigpiod/pi-gpiod.html
+++ b/hardware/pigpiod/pi-gpiod.html
@@ -171,7 +171,7 @@
 <script type="text/x-red" data-help-name="pi-gpiod in">
     <p>Raspberry Pi input node. Generates a <code>msg.payload</code> with either a
     0 or 1 depending on the state of the input pin.
-    Requires the <a href="http://abyz.co.uk/rpi/pigpio/pigpiod.html" target="_new">pi-gpiod</a>
+    Requires the <a href="http://abyz.me.uk/rpi/pigpio/pigpiod.html" target="_new">pi-gpiod</a>
     daemon to be running on the host computer in order to work.</p>
     <p><b>Outputs</b>
     <ul>
