Save pwm frequency correctly

--- a/hardware/pigpiod/pi-gpiod.html
+++ b/hardware/pigpiod/pi-gpiod.html
@@ -456,7 +456,8 @@
          level: { value:"0" },
          out: { value:"out" },
          sermin: { value:"1000" },
-         sermax: { value:"2000" }
+         sermax: { value:"2000" },
+         pwmfreq: {value:"10000"}
      },
      inputs:1,
      outputs:0,
